Route service updated